[package]
name = "agreed-integration-tests"
version = "1.0.0"
edition = "2018"
authors = ["Attila Bagossy <attila.bagossy@nlv8.com>"]
categories = ["algorithms", "asynchronous", "data-structures"]
description = "Integration tests for Agreed, a Rust implementation of the Raft consensus protocol (fork of async-raft)."
documentation = "https://docs.rs/agreed"
homepage = "https://github.com/nlv8/agreed"
keywords = ["raft", "consensus", "data-storage"]
license = "MIT/Apache-2.0"
repository = "https://github.com/nlv8/agreed"
readme = "../README.md"

[dev-dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
bytes = "1.0"
derive_more = { version="0.99.13", default-features=false, features=["from"] }
futures = "0.3"
log = "0.4"
rand = "0.8"
serde = { version="1", features=["derive"] }
thiserror = "1.0.24"
tokio = { version="1.0", default-features=false, features=["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-futures = "0.2.5"
maplit = "1.0.2"
agreed = { version="1.0.0", path="../agreed" }
agreed-memstore = { version="1.0.0", path="../agreed-memstore" }
tracing-subscriber = "0.2.18"
