[package]
name = "agreed-memstore"
version = "0.2.0"
edition = "2018"
categories = ["algorithms", "asynchronous", "data-structures"]
description = "An in-memory implementation of the `agreed::RaftStorage` trait."
license = "MIT/Apache-2.0"
authors = ["Attila Bagossy <attila.bagossy@nlv8.com>"]
documentation = "https://docs.rs/agreed-memstore"
keywords = ["raft", "consensus", "data-storage"]
homepage = "https://github.com/agreed/agreed"
repository = "https://github.com/agreed/agreed"
readme = "README.md"

[dependencies]
anyhow = "1.0.32"
agreed = { version="1.0", path="../agreed" }
serde = { version="1.0.114", features=["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version="1.0", default-features=false, features=["sync"] }
tracing = "0.1.17"
tracing-futures = "0.2.4"

[features]
docinclude = [] # Used only for activating `doc(include="...")` on nightly.

[package.metadata.docs.rs]
features = ["docinclude"] # Activate `docinclude` during docs.rs build.
